fix broken link

--- a/src/content/docs/zh-cn/guides/troubleshooting.mdx
+++ b/src/content/docs/zh-cn/guides/troubleshooting.mdx
@@ -139,7 +139,7 @@ nodeLinker: "node-modules"
 
 ### 包含了意外的 `<script>` 或 `<style>` 标签
 
-你可能会注意到，即使组件不出现在最终输出中，导入的组件的 `<script>` 或 `<style>` 标签也会包含在 HTML 源中。例如，这样的情况会发生在未展示的[条件渲染](/zh-cn/core-concepts/astro-components/#dynamic-html)组件中。
+你可能会注意到，即使组件不出现在最终输出中，导入的组件的 `<script>` 或 `<style>` 标签也会包含在 HTML 源中。例如，这样的情况会发生在未展示的[条件渲染](/zh-cn/core-concepts/astro-components/#动态-html)组件中。
 
 Astro 的构建过程是基于模块图的：一旦组件包含在模板中，它的 `<script>` 和 `<style>` 标签就会被处理、优化和打包，无论该组件是否出现在最终输出中。当使用 `is:inline` 指令时，该规则将不适用于脚本。
 
