--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -233,10 +233,10 @@ defineCollection({
     tags: z.array(z.string()),
     // An optional frontmatter property. Very common!
     footnote: z.string().optional(),
-    // Dates in frontmatter, written without "" around them are read in as actual date objects
-    // Alternatively, you could transform a string date to a real date with
-    // z.string().transform((str) => new Date(str))
+    // In frontmatter, dates written without quotes around them are interpreted as Date objects
     publishDate: z.date(),
+    // You can also transform a date string (e.g. "2022-07-08") to a Date object
+	authorDate: z.string().transform((str) => new Date(str)),
     // Advanced: Validate that the string is also an email
     authorContact: z.string().email(),
     // Advanced: Validate that the string is also a URL
