--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -551,7 +551,7 @@ This guide shows you how to convert an existing Astro project with Markdown file
     Any individual Markdown or MDX file imports should be replaced by [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug).
     :::
 
-    Lastly, the tutorial blog project includes an RSS feed. This file must be converted to an async function, use `getCollection`, and use the `data` object:
+    Lastly, the tutorial blog project includes an RSS feed. This function must also use `getCollection` and the `data` object, and be converted to an async function to do so:
 
     ```js title="src/pages/rss.xml.js" {4-5, 10-15} 
     import rss from "@astrojs/rss";
