--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -236,7 +236,7 @@ defineCollection({
     // In frontmatter, dates written without quotes around them are interpreted as Date objects
     publishDate: z.date(),
     // You can also transform a date string (e.g. "2022-07-08") to a Date object
-	authorDate: z.string().transform((str) => new Date(str)),
+    // publishDash: z.string().transform((str) => new Date(str)),
     // Advanced: Validate that the string is also an email
     authorContact: z.string().email(),
     // Advanced: Validate that the string is also a URL
