--- a/src/content/docs/fr/reference/cli-reference.mdx
+++ b/src/content/docs/fr/reference/cli-reference.mdx
@@ -1,5 +1,5 @@
 ---
-title: Lignes de Commande
+title: Interface de Ligne de Commande
 i18nReady: true
 ---
 import Since from '~/components/Since.astro';
@@ -7,3 +7,105 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
 
+Vous pouvez utiliser l'interface de ligne de commande (ILC) fournie par Astro pour développer, construire et prévisualiser votre projet à partir d'une fenêtre de terminal.
+
+Utilisez le CLI en exécutant l'une des **commandes** documentées sur cette page, suivie éventuellement de tous les **drapeaux**. Les drapeaux personnalisent le comportement d'une commande. Par exemple, pour démarrer le serveur de développement sur le port `8080`, vous combineriez la commande `astro dev` avec le drapeau `--port` : `astro dev --port 8080`.
+
+Dans la plupart des cas, vous utiliserez le CLI via votre gestionnaire de paquets :
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npx astro dev --port 8080
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm astro dev --port 8080
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn astro dev --port 8080
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+Si vous avez démarré votre projet en utilisant [l'assistant `create astro`](/fr/install/auto/#1-run-the-setup-wizard), vous pouvez également utiliser les scripts dans `package.json` pour une version abrégée de ces commandes. Consultez le fichier README.md de votre projet pour savoir quelles commandes sont disponibles.
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  # lance le serveur de développement sur le port 8080 en utilisant le script `start` dans `package.json`
+  npm run start -- --port 8080
+  ```
+  (Le `--` supplémentaire avant le drapeau `--port` est nécessaire pour que `npm` transmette vos drapeaux à la commande `astro`.)
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  # lance le serveur de développement sur le port 8080 en utilisant le script `start` dans `package.json`
+  pnpm start --port 8080
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  # lance le serveur de développement sur le port 8080 en utilisant le script `start` dans `package.json`
+  yarn start --port 8080
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+## `astro dev`
+
+Exécute le serveur de développement d'Astro. Il s'agit d'un serveur HTTP local qui ne regroupe pas les fichiers et les ressources. Il utilise le Remplacement de Modules à Chaud (HMR) pour mettre à jour votre navigateur lorsque vous enregistrez des modifications dans votre éditeur.
+
+<h3>Drapeaux</h3>
+
+Utilisez ces drapeaux pour personnaliser le comportement du serveur de développement d'Astro. Pour les drapeaux partagés avec d'autres commandes Astro, voir [drapeaux communs](#drapeaux-communs) ci-dessous.
+
+#### `--port <nombre>`
+
+Spécifie le port sur lequel se lancer. Il est défini par défaut sur `3000`.
+
+#### `--host [adresse IP facultative]`
+
+Définit les adresses IP réseau sur lesquelles le serveur de développement doit écouter (c'est-à-dire les adresses IP autres que localhost). Cela peut être utile pour tester votre projet sur des périphériques locaux tels qu'un téléphone portable pendant le développement.
+
+- `--host` — écouter sur toutes les adresses, y compris les adresses LAN et publiques
+- `--host` <adresse-personnalisée> — expose une adresse IP réseau à <adresse-personnalisée>
+
+:::caution
+Ne pas utiliser le drapeau `--host` pour exposer le serveur de développement dans un environnement de production. Le serveur de développement est conçu pour une utilisation locale pendant le développement de votre site uniquement.
+:::
+
+## `astro build`
+
+Compile votre site pour le déploiement. Par défaut, cela générera des fichiers statiques et les placera dans un répertoire `dist/`. Si le [SSR est activé](/fr/guides/rendu-côté-serveur/), cela générera les fichiers serveur nécessaires à votre site.
+
+<h3>Options</h3>
+
+Utilisez ces drapeaux pour personnaliser votre Build. Pour les drapeaux partagées avec les autres commandes Astro, voir les [drapeaux communs](#drapeaux-communs) ci-dessous.
+
+#### `--drafts`
+
+Inclut les [pages de brouillon Markdown](/fr/guides/markdown-content/#pages-brouillon) dans le Build.
+
+## `astro preview`
+
+Démarre un serveur local pour servir votre répertoire statique `dist/`.
+
+Cette commande est utile pour prévisualiser votre Build localement avant de le déployer. Elle n'est pas conçue pour être exécutée en production. Pour obtenir de l'aide sur l'hébergement en production, consultez notre guide sur [Déployer un site Astro](/fr/guides/deploy/).
+
+Depuis Astro 1.5.0, `astro preview` fonctionne également pour les Builds SSR si vous utilisez un adaptateur qui le supporte. Actuellement, seul [l'adaptateur Node](/fr/guides/integrations-guide/node/) prend en charge ## `astro preview`.
+
+Peut être combiné avec les [drapeaux communs](#drapeaux-communs) documentés ci-dessous.
+
+## `astro check`
+
+Lance les diagnostics (comme la vérification de type dans les fichiers `.astro`) sur votre projet et signale les erreurs à la console. Si des erreurs sont trouvées, le processus se terminera avec un code de **1**.
+
+Cette commande est destinée à être utilisée dans un processus d'intégration continue.
+
+:::note
+Cette commande ne vérifie les types que dans les fichiers `.astro`.
+:::
