Finished adding content

--- a/src/content/docs/fr/reference/cli-reference.mdx
+++ b/src/content/docs/fr/reference/cli-reference.mdx
@@ -109,3 +109,101 @@ Cette commande est destinée à être utilisée dans un processus d'intégration
 :::note
 Cette commande ne vérifie les types que dans les fichiers `.astro`.
 :::
+
+📚 En savoir plus sur le [support de TypeScript dans Astro](/fr/guides/typescript/).
+
+## `astro sync`
+
+<p>
+  <Since v="2.0.0" />
+</p>
+
+:::tip
+Exécuter `astro dev` ou `astro build` exécutera également la commande `sync`.
+:::
+
+Génère des types TypeScript pour tous les modules Astro. Cela configure un [fichier `src/env.d.ts`](/fr/guides/typescript/#setup) pour l'inférence de type et définit le module `astro:content` pour l'[API de Collections de Contenu](/fr/guides/content-collections/).
+
+## `astro add`
+
+Ajoute une intégration à votre configuration. En savoir plus dans [le guide des intégrations](/fr/guides/integrations-guide/#automatic-integration-setup).
+
+## `astro docs`
+
+Lance directement le site web Astro Docs depuis le terminal.
+
+## `astro telemetry`
+
+Configure la télémétrie pour l'utilisateur actuel de l'ILC. La télémétrie est une donnée anonyme qui fournit à l'équipe Astro des informations sur les fonctionnalités Astro les plus souvent utilisées.
+
+La télémétrie peut être désactivée avec cette commande ILC :
+
+```shell
+astro telemetry disable
+```
+
+La télémétrie peut être réactivée ultérieurement avec :
+
+```shell
+astro telemetry enable
+```
+
+La commande `clear` réinitialise les données de télémétrie :
+
+```shell
+astro telemetry clear
+```
+
+:::tip [Vous voulez désactiver la télémétrie dans des environnements IC ?]
+Ajoutez la commande `astro telemetry disable` à vos scripts IC ou définissez la variable d'environnement `ASTRO_TELEMETRY_DISABLED`.
+:::
+
+## Drapeaux courants
+
+### `--root <chemin>`
+
+Spécifie le chemin de la racine du projet. Si aucun chemin n'est spécifié, le répertoire de travail actuel est considéré comme la racine.
+
+La racine est utilisée pour trouver le fichier de configuration Astro.
+
+```shell
+astro --root monDossierRacine/monDossierProjet dev
+```
+
+### `--config <chemin>`
+
+Spécifie le chemin du fichier de configuration par rapport à la racine du projet. Par défaut à `astro.config.mjs`. Utilisez ceci si vous utilisez un nom différent pour votre fichier de configuration ou si votre fichier de configuration est dans un autre dossier.
+
+```shell
+astro --config config/astro.config.mjs dev
+```
+
+### `--site <url>`
+
+Configure le [`site`](/fr/reference/configuration-reference/#site) pour votre projet. Passer cette option remplacera, si elle existe, la valeur `site` de votre fichier `astro.config.mjs`.
+
+### `--base <pathname>`
+
+<Since v="1.4.1" />
+
+Configure la [`base`](/fr/reference/configuration-reference/#base) pour votre projet. Passer cette option remplacera, si elle existe, la valeur `base` de votre fichier `astro.config.mjs`.
+
+### `--verbose`
+
+Active les journaux verbeux, ce qui est utile pour déboguer un problème.
+
+### `--silent`
+
+Active les journaux silencieux, ce qui lance le serveur sans aucune sortie dans la console.
+
+## Options globales
+
+Utilisez ces options pour obtenir des informations à propos de l'ILC `astro`.
+
+### `--version`
+
+Affiche le numéro de version d'Astro et quitte.
+
+### `--help`
+
+Affiche le message d'aide et quitte.
