--- a/src/content/docs/es/core-concepts/routing.mdx
+++ b/src/content/docs/es/core-concepts/routing.mdx
@@ -373,9 +373,9 @@ const params = Astro.params;
 
 ## Excluyendo páginas
 
-Puedes excluir páginas, o incluso directorios completos de ser generados añadiendo el prefijo (`_`).
+Puedes excluir páginas o directorios de ser generados añadiendo el prefijo (`_`). Los archivos con el prefijo `_` no serán reconocidos por el router y no serán generados en el directorio `dist/`.
 
-Esto te permite crear páginas privadas, y también incluir otros tipos de archivos como *tests*, utilidades y componentes junto con las páginas a donde pertenecen, evitando generar archivos `.html` en el directorio `dist/`.
+Puedes usar esto para temporalmente inhabilitar páginas y también para poner tests, utilidades y componentes en la misma carpeta como sus páginas correspondientes.
 
 En este ejemplo, solo `src/pages/index.astro` y `src/pages/posts/post1.md` serán generados como rutas y archivos `.html`.
 
