--- a/src/content/docs/ko/install/auto.mdx
+++ b/src/content/docs/ko/install/auto.mdx
@@ -19,7 +19,7 @@ Astro를 설치할 준비가 되었나요? 이 가이드를 따라 `create astro
 
 #### 설치하기
 
-`create astro`는 Astro 프로젝트를 시작하는 가장 빠른 방법입니다. 새 프로젝트를 시작하기 위한 모든 단계를 안내하고 필요한 경우 공식 템플릿을 고를 수 있도록 도와줍니다. 또한, [`--template` 인자를 사용하면 Github에 있는 기존 프로젝트를 활용할 수 있습니다.](#시작-템플릿)
+`create astro`는 Astro 프로젝트를 시작하는 가장 빠른 방법입니다. 새 프로젝트를 시작하기 위한 모든 단계를 안내하고 필요한 경우 공식 템플릿을 고를 수 있도록 도와줍니다. 또한, [`--template` 인자를 사용하면 GitHub에 있는 기존 프로젝트를 활용할 수 있습니다.](#시작-템플릿)
 
 :::tip[웹에서 미리보기]
 Astro 프로젝트를 쉽고 간편하게 브라우저 안에서 시험해 볼 수 있습니다. [astro.new](https://astro.new/)를 방문하여 시작 템플릿 중 하나를 고르고 새로운 프로젝트를 시작해보세요.
