Update the title

--- a/src/content/docs/ko/install/auto.mdx
+++ b/src/content/docs/ko/install/auto.mdx
@@ -1,5 +1,5 @@
 ---
-title: Astro를 자동 CLI로 설치하기
+title: Astro를 CLI로 자동 설치하기
 description: 'create-astro CLI 도구를 사용하여 NPM, PNPM, 또는 Yarn으로 Astro 설치하기'
 i18nReady: true
 ---
