--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -233,8 +233,10 @@ defineCollection({
     tags: z.array(z.string()),
     // An optional frontmatter property. Very common!
     footnote: z.string().optional(),
-    // Convert a standard date-string into a `Date` object
-    publishDate: z.string().transform(str => new Date(str)),
+    // In frontmatter, dates written without quotes around them are interpreted as Date objects
+    publishDate: z.date(),
+    // You can also transform a date string (e.g. "2022-07-08") to a Date object
+    // publishDate: z.string().transform((str) => new Date(str)),
     // Advanced: Validate that the string is also an email
     authorContact: z.string().email(),
     // Advanced: Validate that the string is also a URL
@@ -549,9 +551,9 @@ This guide shows you how to convert an existing Astro project with Markdown file
     Any individual Markdown or MDX file imports should be replaced by [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug).
     :::
 
-    Lastly, the tutorial blog project includes an RSS feed. This file must also use `getCollection` and use the `data` object:
+    Lastly, the tutorial blog project includes an RSS feed. This function must also use `getCollection` and the `data` object, and be converted to an async function to do so:
 
-    ```js title="src/pages/rss.xml.js" {5, 10-15} 
+    ```js title="src/pages/rss.xml.js" {4-5, 10-15} 
     import rss from "@astrojs/rss";
     import { getCollection } from "astro:content";
 
