--- a/src/content/docs/es/guides/typescript.mdx
+++ b/src/content/docs/es/guides/typescript.mdx
@@ -84,6 +84,30 @@ import Layout from '@layouts/Layout.astro';
 }
 ```
 
+## Extending `window` and `globalThis`
+
+Es posible que desees agregar una propiedad al objeto global. Puedes hacer esto agregando una declaración global a tu archivo `env.d.ts`:
+
+```ts title="env.d.ts"
+declare global {
+	var myString: string;
+	function myFunction(): boolean;
+}
+export {};
+```
+
+Esto proporcionará tipado a `globalThis.myString` y `globalThis.myFunction`, así como a `window.myString` y `window.myFunction`.
+
+Tenga en cuenta que `window` está solo disponible en el código del lado del cliente. `globalThis` está disponible tanto en el lado del servidor como en el lado del cliente, pero su valor del lado del servidor no se compartirá con el cliente.
+
+Si tu solo quieres tipar una propiedad en el objeto `window`, proporciona una interfaz `Window` en su lugar:
+
+```ts title="env.d.ts"
+interface Window {
+	myFunction(): boolean;
+}
+```
+
 ## Props de componentes
 
 Astro soporta escribir los tipos de las propiedades de tus componentes usando TypeScript. Para habilitar esto, agrega una interfaz `Props` a tu componente en el frontmatter. Puedes usar una declaración `export`, pero no es necesaria. La [Extensión de Astro para VSCode](/es/editor-setup/) buscará automáticamente la interfaz `Props` y te dará soporte de TS cuando uses ese componente en otra plantilla.
