--- a/src/content/docs/es/reference/cli-reference.mdx
+++ b/src/content/docs/es/reference/cli-reference.mdx
@@ -175,11 +175,11 @@ Especifica la ruta relativa al archivo de configuración desde la raíz del dire
 astro --config config/astro.config.mjs dev
 ```
 
-### `--site`
+### `--site <url>`
 
 Configura el valor de [`site`](/es/reference/configuration-reference/#site) para tu proyecto. Usando este flag sobreescribirá el valor actual de `site` en tu archivo `astro.config.mjs`, si es que existe.
 
-### `--base`
+### `--base <pathname>`
 
 <Since v="1.4.1" />
 
