--- a/src/content/docs/es/reference/integrations-reference.mdx
+++ b/src/content/docs/es/reference/integrations-reference.mdx
@@ -273,7 +273,7 @@ La dirección, familia y número de puerto proporcionados por el [módulo NodeJS
 **Por qué:** Para configurar cualquier objeto global o cliente necesario durante la compilación a producción. Esto también puede ampliar las opciones de configuración de compilación de la [API del adaptador](/es/reference/adapter-reference/).
 
 ```js
-'astro:build:start'?: (options: { buildConfig: BuildConfig }) => void | Promise<void>;
+'astro:build:start'?: () => void | Promise<void>;
 ```
 
 ### `astro:build:setup`
