--- a/src/content/docs/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -27,7 +27,7 @@ When you rebuild your Next.js site in Astro, you will notice some important diff
 
 - [MPA vs SPA](/en/concepts/mpa-vs-spa/): Next.js is a React single-page app, and uses `index.js` as your project's root. Astro is a multi-page site, and `index.astro` is your home page.
 
-- [`.astro` components](/en/core-concepts/astro-components/) are not written as exported functions that return page templating. Instead, you'll split your code into a "code fence" and a body exclusively for the HTML you generate.
+- [`.astro` components](/en/core-concepts/astro-components/) are not written as exported functions that return page templating. Instead, you'll split your code into a "code fence" for your JavaScript and a body exclusively for the HTML you generate.
 
 - [Content-focus](/en/concepts/why-astro/): Astro was designed primarily for content-focused sites with small pieces of interactivity. An existing Next.js app might be built for high client-side interactivity and may include items that are difficult to replicate using `.astro` components, such as dashboards.
 
