update create astro advice with our own templates

--- a/src/content/docs/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -32,18 +32,17 @@ When you rebuild your Gatsby site in Astro, you will notice some important diffe
 
 - [Astro components](/en/core-concepts/astro-components/) are not written as exported functions that return page templating. Instead, you'll split your code into a "code fence" for your JavaScript and a body exclusively for the HTML you generate.
 
-- [Local file data](/en/guides/imports/): Gatsby uses GraphQL to retrieve data from your project files. Astro uses ESM imports and a top-level await [`Astro.glob()`](/en/guides/imports/#astroglob) call to import data from your project files. You can manually add GraphQL to your Astro project but it is not included by default.
+- [Local file data](/en/guides/imports/): Gatsby uses GraphQL to retrieve data from your project files. Astro uses ESM imports and top-level await functions (e.g. [`Astro.glob()`](/en/guides/imports/#astroglob), [`getCollection()`](/en/guides/content-collections/#querying-collections)) to import data from your project files. You can manually add GraphQL to your Astro project but it is not included by default.
 
 
 ## Convert your Gatsby Project
 
-Each project migration will look different, but there are some common steps  to follow when converting from Next.js to Astro. This page will get you started in the right direction.
+Each project migration will look different, but there are some common steps you can follow when converting from Gatsby to Astro to get you started.
 
 ### Create a new Astro project
+Use the `create astro` command for your package manager to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes).
 
-Use the `create astro` command for your package manager to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes). 
-
-You can also pass a `--template` argument to the `create astro` command to start from an existing Astro repository on GitHub:
+You can pass a `--template` argument to the `create astro` command to start a new Astro project with one of our official starters (e.g. `docs`, `blog`, `portfolio`). Or, you can [start a new project from any existing Astro repository on GitHub](/en/install/auto/#starter-templates).
 
   <PackageManagerTabs>
     <Fragment slot="npm">
@@ -51,8 +50,8 @@ You can also pass a `--template` argument to the `create astro` command to start
     # launch the Astro CLI Wizard 
     npm create astro@latest
 
-    # start from any existing repo
-    npm create astro -- --template <github-username>/<github-repo>
+    # create a new project with an official example
+    npm create astro@latest -- --template <example-name>
     ```
     </Fragment>
     <Fragment slot="pnpm">
@@ -60,8 +59,8 @@ You can also pass a `--template` argument to the `create astro` command to start
     # launch the Astro CLI Wizard 
     pnpm create astro@latest
 
-    # start from any existing repo
-    pnpm create astro --template <github-username>/<github-repo>
+    # create a new project with an official example
+    pnpm create astro@latest --template <example-name>
     ```
     </Fragment>
     <Fragment slot="yarn">
@@ -69,8 +68,8 @@ You can also pass a `--template` argument to the `create astro` command to start
     # launch the Astro CLI Wizard 
     yarn create astro@latest
 
-    # start from any existing repo
-    yarn create astro --template <github-username>/<github-repo>
+    # create a new project with an official example
+    yarn create astro@latest --template <example-name>
     ```
     </Fragment>
   </PackageManagerTabs>
@@ -78,7 +77,7 @@ You can also pass a `--template` argument to the `create astro` command to start
 Then, copy your existing Gatsby project files over to your new Astro project into a separate folder outside of `src`.
 
 :::tip
-Prefer to explore in your browser instead? Visit https://astro.new for a variety of starter templates that can be opened and edited in StackBlitz, CodeSandbox, or Gitpod.
+Visit https://astro.new for the full list of official starter templates, and links for opening a new project in StackBlitz, CodeSandbox or Gitpod.
 :::
 
 ### Install integrations (optional)
