--- a/src/content/docs/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -33,14 +33,12 @@ When you rebuild your Next.js site in Astro, you will notice some important diff
 
 ## Convert your Next.js Project
 
-Each project migration will look different, but there are some common steps  to follow when converting from Next.js to Astro. This page will get you started in the right direction.
+Each project migration will look different, but there are some common steps you can follow when converting from Next.js to Astro to get you started in the right direction.
 
 ### Create a new Astro project
+Use the `create astro` command for your package manager to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes).
 
-Use the `create astro` command for your package manager to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes). 
-
-
-You can also pass a `--template` argument to the `create astro` command to start from an existing Astro repository on GitHub:
+You can pass a `--template` argument to the `create astro` command to start a new Astro project with one of our official starters (e.g. `docs`, `blog`, `portfolio`). Or, you can [start a new project from any existing Astro repository on GitHub](/en/install/auto/#starter-templates).
 
   <PackageManagerTabs>
     <Fragment slot="npm">
@@ -48,8 +46,8 @@ You can also pass a `--template` argument to the `create astro` command to start
     # launch the Astro CLI Wizard 
     npm create astro@latest
 
-    # start from any existing repo
-    npm create astro -- --template <github-username>/<github-repo>
+    # create a new project with an official example
+    npm create astro@latest -- --template <example-name>
     ```
     </Fragment>
     <Fragment slot="pnpm">
@@ -57,8 +55,8 @@ You can also pass a `--template` argument to the `create astro` command to start
     # launch the Astro CLI Wizard 
     pnpm create astro@latest
 
-    # start from any existing repo
-    pnpm create astro --template <github-username>/<github-repo>
+    # create a new project with an official example
+    pnpm create astro@latest --template <example-name>
     ```
     </Fragment>
     <Fragment slot="yarn">
@@ -66,8 +64,8 @@ You can also pass a `--template` argument to the `create astro` command to start
     # launch the Astro CLI Wizard 
     yarn create astro@latest
 
-    # start from any existing repo
-    yarn create astro --template <github-username>/<github-repo>
+    # create a new project with an official example
+    yarn create astro@latest --template <example-name>
     ```
     </Fragment>
   </PackageManagerTabs>
@@ -75,7 +73,7 @@ You can also pass a `--template` argument to the `create astro` command to start
 Then, copy your existing Next project files over to your new Astro project in a separate folder outside of `src`.
 
 :::tip
-Prefer to explore in your browser instead? Visit https://astro.new for a variety of starter templates that can be opened and edited in StackBlitz, CodeSandbox, or Gitpod.
+Visit https://astro.new for the full list of official starter templates, and links for opening a new project in StackBlitz, CodeSandbox or Gitpod.
 :::
 
 ### Install integrations (optional)
