update "tips" and make sound less like "steps"

--- a/src/content/docs/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -37,7 +37,7 @@ When you rebuild your Gatsby site in Astro, you will notice some important diffe
 
 ## Convert your Gatsby Project
 
-Each project migration will look different, but there are some common steps you can follow when converting from Gatsby to Astro to get you started.
+Each project migration will look different, but there are some common actions you will perform when converting from Gatsby to Astro.
 
 ### Create a new Astro project
 Use the `create astro` command for your package manager to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes).
@@ -90,18 +90,6 @@ You may find it useful to install some of [Astro's optional integrations](/en/gu
 
 - **@astrojs/mdx**: to bring existing MDX files from your Gatsby project, or to use MDX in your new Astro site.
 
-### Repurpose config files
-
-Gatsby has several top-level configuration files that also include site and page metadata and are used for routing. You will not use any of these `gatsby-*.js` files in your Astro project, but there may be some content that you can reuse:
-
-- `gatsby-config.js`: Move your `siteMetadata: {}` into `src/data/siteMetadata.js` (or `siteMetadata.json`) to import data about your site (title, description, social accounts, etc.) into page layouts.
-
-- `gatsby-browser.js`: Consider adding anything used here directly into your [main layout](#migrating-layout-files)'s `<head>` tag.
-
-- `gatsby-node.js`: You will not need to create your own nodes in Astro, but viewing the schema in this file may help you with defining types in your Astro project.
-
-- `gatsby-ssr.js`: If you choose to use SSR in Astro, you will add and configure the adapter of your choice directly in `astro.config.mjs`.
-
 
 ### Put your code in `src`
 
@@ -121,8 +109,7 @@ Following [Astro's project structure](/en/core-concepts/project-structure/):
 
   All other folders are optional, and you can organize the contents of your `src/` folder any way you like. Other common folders in Astro projects include `src/layouts/`, `src/components`, `src/styles`, and `src/scripts`.
 
-
-### Convert JSX files to `.astro` files
+### Tips: Convert JSX files to `.astro` files
 
 Here are some tips for converting a Gatsby `.js` component into a `.astro` component:
 
@@ -227,9 +214,9 @@ In Gatsby, your [pages and posts](/en/core-concepts/astro-pages/) may exist in `
 
 #### React Pages
 
-Your existing Gatsby JSX (`.js`) pages will need to be [converted from JSX files to `.astro` pages](#convert-jsx-files-to-astro-files). You cannot use an existing JSX page file in Astro.
+Your existing Gatsby JSX (`.js`) pages will need to be [converted from JSX files to `.astro` pages](#tips-convert-jsx-files-to-astro-files). You cannot use an existing JSX page file in Astro.
 
-These `.astro` pages must be located within `src/pages/` and will have page routes generated automatically based on their file path.
+These [`.astro` pages](/en/core-concepts/astro-pages/) must be located within `src/pages/` and will have page routes generated automatically based on their file path.
 
 #### Markdown and MDX pages
 
@@ -242,6 +229,18 @@ Alternatively, you can use [content collections](/en/guides/content-collections/
 As Astro outputs raw HTML, it is possible to write end-to-end tests using the output of the build step. Any end-to-end tests written previously might work out-of-the-box if you have been able to match the markup of the older Gatsby site. Testing libraries such as Jest and React Testing Library can be imported and used in Astro to test your React components.
 
 See Astro's [testing guide](/en/guides/testing/) for more.
+
+### Repurpose config files
+
+Gatsby has several top-level configuration files that also include site and page metadata and are used for routing. You will not use any of these `gatsby-*.js` files in your Astro project, but there may be some content that you can reuse as you build your Astro project:
+
+- `gatsby-config.js`: Move your `siteMetadata: {}` into `src/data/siteMetadata.js` (or `siteMetadata.json`) to import data about your site (title, description, social accounts, etc.) into page layouts.
+
+- `gatsby-browser.js`: Consider adding anything used here directly into your [main layout](#migrating-layout-files)'s `<head>` tag.
+
+- `gatsby-node.js`: You will not need to create your own nodes in Astro, but viewing the schema in this file may help you with defining types in your Astro project.
+
+- `gatsby-ssr.js`: If you choose to use SSR in Astro, you will [add and configure the SSR adapter](/en/guides/server-side-rendering/#adding-an-adapter) of your choice directly in `astro.config.mjs`.
 
 ## Reference: Convert to Astro Syntax
 
