--- a/src/content/docs/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -33,7 +33,7 @@ When you rebuild your Next.js site in Astro, you will notice some important diff
 
 ## Convert your Next.js Project
 
-Each project migration will look different, but there are some common steps you can follow when converting from Next.js to Astro to get you started in the right direction.
+Each project migration will look different, but there are some common actions you will perform when converting from Next.js to Astro.
 
 ### Create a new Astro project
 Use the `create astro` command for your package manager to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes).
@@ -103,7 +103,7 @@ Following [Astro's project structure](/en/core-concepts/project-structure/):
 
 Astro has a configuration file at the root of your project called [`astro.config.mjs`](/en/guides/configuring-astro/). This is used only for configuring your Astro project and any installed integrations, including [SSR adapters](/en/guides/deploy/).
 
-### Convert JSX files to `.astro` files
+### Tips: Convert JSX files to `.astro` files
 
 Here are some tips for converting a Next `.js` component into a `.astro` component:
 
@@ -304,7 +304,7 @@ In Astro, **all your page content must live within `src/`**, in either `src/page
 
 #### React pages
 
-Your existing Next JSX (`.js`) pages will need to be [converted from JSX files to `.astro` pages](#convert-jsx-files-to-astro-files). You cannot use an existing JSX page file in Astro.
+Your existing Next JSX (`.js`) pages will need to be [converted from JSX files to `.astro` pages](#tips-convert-jsx-files-to-astro-files). You cannot use an existing JSX page file in Astro.
 
 These [`.astro` pages](/en/core-concepts/astro-pages/) must be located within `src/pages/` and will have page routes generated automatically based on their file path.
 
