typo fixes in Next

--- a/src/content/docs/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -379,7 +379,7 @@ See more about [specific `<slot />` usage in Astro](/en/core-concepts/astro-comp
 
 ### Next Data Fetching to Astro
 
-Convert any instances of `getStaticProps()` to `Astro.glob()` or `getCollections()` to access data from other files in your project source. To [fetch remote data](/en/guides/data-fetching/), use `fetch()`.
+Convert any instances of `getStaticProps()` to either `Astro.glob()` or `getCollection()`/`getEntryBySlug()` in order to access data from other files in your project source. To [fetch remote data](/en/guides/data-fetching/), use `fetch()`.
 
 These data requests are made in the frontmatter of the Astro component and use top-level await.
 
@@ -399,7 +399,7 @@ const randomUser = data.results[0];
 ---
 ```
 
-See more about [local files imports with `Astro.glob()`](/en/guides/imports/#astroglob) or [querying using the Collections API]([fetching remote data](/en/guides/data-fetching/)).
+See more about [local files imports with `Astro.glob()`](/en/guides/imports/#astroglob), [querying using the Collections API](/en/guides/content-collections/#querying-collections) or [fetching remote data](/en/guides/data-fetching/).
 
 ### Next Styling to Astro
 
