i18n(zh-cn): Translate tutorial/1-setup/5.mdx

--- a/src/content/docs/zh-cn/tutorial/1-setup/4.mdx
+++ b/src/content/docs/zh-cn/tutorial/1-setup/4.mdx
@@ -2,7 +2,7 @@
 type: tutorial
 title: 创建在线代码仓库
 description: |-
-  Tutorial: 立你的第一个 Astro 博客 —
+  Tutorial: 建立你的第一个 Astro 博客 —
   为你的项目创建 GitHub 仓库
 ---
 import Badge from '~/components/Badge.astro';
