document `--watch` for `astro check`  command

--- a/src/content/docs/en/reference/cli-reference.mdx
+++ b/src/content/docs/en/reference/cli-reference.mdx
@@ -106,6 +106,14 @@ Runs diagnostics (such as type-checking within `.astro` files) against your proj
 
 This command is intended to be used in CI workflows.
 
+<h3>Flags</h3>
+
+Use these flags to customize the behavior of the command.
+
+#### `--watch`
+
+The command will watch for any change to `.astro` files, and will report errors, if there are any.
+
 :::note
 This command only checks types within `.astro` files.  
 :::
