--- a/src/content/docs/en/recipes.mdx
+++ b/src/content/docs/en/recipes.mdx
@@ -9,7 +9,7 @@ import RecipesNav from '~/components/RecipesNav.astro';
 See guided examples of adding features to your Astro project.
 
 
-## Curated Recipes
+## Official Recipes
 
 <RecipesNav />
 
