Apply suggestions from code review
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/content/docs/en/reference/cli-reference.mdx
+++ b/src/content/docs/en/reference/cli-reference.mdx
@@ -112,7 +112,7 @@ Use these flags to customize the behavior of the command.
 
 #### `--watch`
 
-The command will watch for any change to `.astro` files, and will report errors, if there are any.
+The command will watch for any changes to `.astro` files, and will report any errors.
 
 :::note
 This command only checks types within `.astro` files.  
