fix: review recommendations

--- a/src/content/docs/de/guides/troubleshooting.mdx
+++ b/src/content/docs/de/guides/troubleshooting.mdx
@@ -59,7 +59,7 @@ Das bedeutet, dass die [Content Security Policy](https://developer.mozilla.org/e
 
 ### Meine Komponente wird nicht gerendert
 
-Überprüfe zuerst, ob du die Komponente in deinem [`.astro`-Komponentenskript](/de/core-concepts/astro-components/#das-komponentenskript) oder [`.mdx`-Datei](/de/guides/markdown-content/#verwendung-von-komponenten-in-markdown) **importiert** hast.
+Überprüfe zuerst, ob du die Komponente in deinem [`.astro`-Komponentenskript](/de/core-concepts/astro-components/#das-komponentenskript) oder deiner [`.mdx`-Datei](/de/guides/markdown-content/#verwendung-von-komponenten-in-markdown) **importiert** hast.
 
 Dann überprüfe deine Importanweisung:
 
@@ -136,7 +136,7 @@ nodeLinker: "node-modules"
 
 In Astro funktioniert der `<head>`-Tag wie jeder andere HTML-Tag: Er wird nicht an den Anfang der Seite verschoben oder mit dem vorhandenen `<head>` zusammengeführt. Deshalb solltest du in der Regel nur ein einziges `<head>`-Tag auf einer Seite verwenden. Wir empfehlen, diesen einzelnen `<head>` und seinen Inhalt in eine [Layout-Komponente](/de/core-concepts/layouts/) zu schreiben.
 
-### Ein unerwartetes `<script>` oder `<style>` ist enthalten
+### Ein unerwartetes `<script>`- oder `<style>`-Tag ist enthalten
 
 Es kann vorkommen, dass die `<script>`- oder `<style>`-Tags einer importierten Komponente in deinem HTML-Quelltext enthalten sind, auch wenn die Komponente in der endgültigen Ausgabe nicht erscheint. Dies ist zum Beispiel der Fall bei [bedingt gerenderten](/de/core-concepts/astro-components/#jsx-ausdrücke) Komponenten, die nicht angezeigt werden.
 
@@ -150,7 +150,7 @@ Der Build-Prozess von Astro arbeitet mit dem Modul-Graph: Sobald eine Komponente
 
 #### Frontmatter
 
-Eine `console.log()`-Anweisung im Astro-Frontmatter wird immer auf dem **Terminal** ausgegeben, auf dem die Astro-CLI läuft. Das liegt daran, dass Astro auf dem Server läuft und nie im Browser.
+Eine `console.log()`-Anweisung im Astro-Frontmatter wird immer in dem **Terminal** ausgegeben, auf dem die Astro-CLI läuft. Das liegt daran, dass Astro auf dem Server läuft und nie im Browser.
 
 ```astro {5}
 ---
