--- a/src/content/docs/fr/reference/cli-reference.mdx
+++ b/src/content/docs/fr/reference/cli-reference.mdx
@@ -9,9 +9,9 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 Vous pouvez utiliser l'interface de ligne de commande (ILC) fournie par Astro pour développer, construire et prévisualiser votre projet à partir d'une fenêtre de terminal.
 
-Utilisez le CLI en exécutant l'une des **commandes** documentées sur cette page, suivie éventuellement de tous les **drapeaux**. Les drapeaux personnalisent le comportement d'une commande. Par exemple, pour démarrer le serveur de développement sur le port `8080`, vous combineriez la commande `astro dev` avec le drapeau `--port` : `astro dev --port 8080`.
+Utilisez l'ILC en exécutant l'une des **commandes** documentées sur cette page, suivie éventuellement de toutes les **options**. Les options personnalisent le comportement d'une commande. Par exemple, pour démarrer le serveur de développement sur le port `8080`, vous combineriez la commande `astro dev` avec l'option `--port` : `astro dev --port 8080`.
 
-Dans la plupart des cas, vous utiliserez le CLI via votre gestionnaire de paquets :
+Dans la plupart des cas, vous utiliserez l'ILC via votre gestionnaire de paquets :
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -36,20 +36,20 @@ Si vous avez démarré votre projet en utilisant [l'assistant `create astro`](/f
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
-  # lance le serveur de développement sur le port 8080 en utilisant le script `start` dans `package.json`
+  # démarre le serveur de développement sur le port 8080 en utilisant le script `start` dans `package.json`
   npm run start -- --port 8080
   ```
-  (Le `--` supplémentaire avant le drapeau `--port` est nécessaire pour que `npm` transmette vos drapeaux à la commande `astro`.)
+  (Le `--` supplémentaire avant l'option `--port` est nécessaire pour que `npm` transmette vos options à la commande `astro`.)
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  # lance le serveur de développement sur le port 8080 en utilisant le script `start` dans `package.json`
+  # démarre le serveur de développement sur le port 8080 en utilisant le script `start` dans `package.json`
   pnpm start --port 8080
   ```
   </Fragment>
   <Fragment slot="yarn">
   ```shell
-  # lance le serveur de développement sur le port 8080 en utilisant le script `start` dans `package.json`
+  # démarre le serveur de développement sur le port 8080 en utilisant le script `start` dans `package.json`
   yarn start --port 8080
   ```
   </Fragment>
@@ -57,15 +57,15 @@ Si vous avez démarré votre projet en utilisant [l'assistant `create astro`](/f
 
 ## `astro dev`
 
-Exécute le serveur de développement d'Astro. Il s'agit d'un serveur HTTP local qui ne regroupe pas les fichiers et les ressources. Il utilise le Remplacement de Modules à Chaud (HMR) pour mettre à jour votre navigateur lorsque vous enregistrez des modifications dans votre éditeur.
+Lance le serveur de développement d'Astro. Il s'agit d'un serveur HTTP local qui ne regroupe pas les fichiers et les ressources. Il utilise le Remplacement de Modules à Chaud (HMR) pour mettre à jour votre navigateur lorsque vous enregistrez des modifications dans votre éditeur.
 
-<h3>Drapeaux</h3>
+<h3>Options</h3>
 
-Utilisez ces drapeaux pour personnaliser le comportement du serveur de développement d'Astro. Pour les drapeaux partagés avec d'autres commandes Astro, voir [drapeaux communs](#drapeaux-communs) ci-dessous.
+Utilisez ces options pour personnaliser le comportement du serveur de développement d'Astro. Pour les options partagées avec d'autres commandes Astro, voir [options courantes](#options-courantes) ci-dessous.
 
 #### `--port <nombre>`
 
-Spécifie le port sur lequel se lancer. Il est défini par défaut sur `3000`.
+Spécifie le port sur lequel se démarrer. Il est défini par défaut sur `3000`.
 
 #### `--host [adresse IP facultative]`
 
@@ -75,7 +75,7 @@ Définit les adresses IP réseau sur lesquelles le serveur de développement doi
 - `--host` <adresse-personnalisée> — expose une adresse IP réseau à <adresse-personnalisée>
 
 :::caution
-Ne pas utiliser le drapeau `--host` pour exposer le serveur de développement dans un environnement de production. Le serveur de développement est conçu pour une utilisation locale pendant le développement de votre site uniquement.
+Ne pas utiliser l'option `--host` pour exposer le serveur de développement à un environnement de production. Le serveur de développement est conçu pour une utilisation locale pendant le développement de votre site uniquement.
 :::
 
 ## `astro build`
@@ -84,7 +84,7 @@ Compile votre site pour le déploiement. Par défaut, cela générera des fichie
 
 <h3>Options</h3>
 
-Utilisez ces drapeaux pour personnaliser votre Build. Pour les drapeaux partagées avec les autres commandes Astro, voir les [drapeaux communs](#drapeaux-communs) ci-dessous.
+Utilisez ces options pour personnaliser votre Build. Pour les options partagées avec les autres commandes Astro, voir les [options courantes](#options-courantes) ci-dessous.
 
 #### `--drafts`
 
@@ -96,9 +96,9 @@ Démarre un serveur local pour servir votre répertoire statique `dist/`.
 
 Cette commande est utile pour prévisualiser votre Build localement avant de le déployer. Elle n'est pas conçue pour être exécutée en production. Pour obtenir de l'aide sur l'hébergement en production, consultez notre guide sur [Déployer un site Astro](/fr/guides/deploy/).
 
-Depuis Astro 1.5.0, `astro preview` fonctionne également pour les Builds SSR si vous utilisez un adaptateur qui le supporte. Actuellement, seul [l'adaptateur Node](/fr/guides/integrations-guide/node/) prend en charge ## `astro preview`.
+Depuis Astro 1.5.0, `astro preview` fonctionne également pour les Builds SSR si vous utilisez un adaptateur qui le supporte. Actuellement, seul [l'adaptateur Node](/fr/guides/integrations-guide/node/) prend en charge `astro preview`.
 
-Peut être combiné avec les [drapeaux communs](#drapeaux-communs) documentés ci-dessous.
+Peut être combiné avec les [options courantes](#options-courantes) documentées ci-dessous.
 
 ## `astro check`
 
@@ -158,7 +158,7 @@ astro telemetry clear
 Ajoutez la commande `astro telemetry disable` à vos scripts IC ou définissez la variable d'environnement `ASTRO_TELEMETRY_DISABLED`.
 :::
 
-## Drapeaux courants
+## Options courantes
 
 ### `--root <chemin>`
 
@@ -172,7 +172,7 @@ astro --root monDossierRacine/monDossierProjet dev
 
 ### `--config <chemin>`
 
-Spécifie le chemin du fichier de configuration par rapport à la racine du projet. Par défaut à `astro.config.mjs`. Utilisez ceci si vous utilisez un nom différent pour votre fichier de configuration ou si votre fichier de configuration est dans un autre dossier.
+Spécifie le chemin du fichier de configuration par rapport à la racine du projet. Il est défini par défaut à `astro.config.mjs`. Utilisez cette options si vous utilisez un nom différent pour votre fichier de configuration ou si votre fichier de configuration est dans un autre dossier.
 
 ```shell
 astro --config config/astro.config.mjs dev
@@ -180,7 +180,7 @@ astro --config config/astro.config.mjs dev
 
 ### `--site <url>`
 
-Configure le [`site`](/fr/reference/configuration-reference/#site) pour votre projet. Passer cette option remplacera, si elle existe, la valeur `site` de votre fichier `astro.config.mjs`.
+Configure le [`site`](/fr/reference/configuration-reference/#site) pour votre projet. Utiliser cette option remplacera, si elle existe, la valeur `site` de votre fichier `astro.config.mjs`.
 
 ### `--base <pathname>`
 
