docs: update structure of fonts guide

--- a/src/content/docs/en/guides/fonts.mdx
+++ b/src/content/docs/en/guides/fonts.mdx
@@ -8,15 +8,9 @@ i18nReady: true
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro';
 
 
+This guide will show you how to add web fonts to your project and use them in your components.
 
-Astro supports all common strategies for adding custom typefaces to your site design. This guide will show you two options for including web fonts in your project.
-
-## Add fonts to your project
-
-### Using a local font file
-
-If you want to add font files to your project, we recommend adding them to your [`public/` directory](/en/core-concepts/project-structure/#public). In your CSS you can then register fonts with an [`@font-face` statement](https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face) and use the `font-family` property to style your site.
-
+## Using a local font file
 
 Let's imagine you have a `DistantGalaxy.woff` font file.
 
@@ -38,7 +32,7 @@ Let's imagine you have a `DistantGalaxy.woff` font file.
     You don't need to include `public` in the font's source URL because all files in `public` get added to your site's root directory.
     :::
 
-1. Use the `font-family` from the `@font-face` statement to style elements in your component or layout. In this example, the `<h1>` heading will have the custom font applied, while the paragraph `<p>` will not.
+1. Use the `font-family` value from the `@font-face` statement to style elements in your component or layout. In this example, the `<h1>` heading will have the custom font applied, while the paragraph `<p>` will not.
 
     ```astro title="src/pages/example.astro" {9-11}
     ---
@@ -55,7 +49,7 @@ Let's imagine you have a `DistantGalaxy.woff` font file.
     </style>
     ```
 
-### Using Fontsource
+## Using Fontsource
 
 The [Fontsource](https://fontsource.org/) project simplifies using Google Fonts and other open source fonts. It provides npm modules you can install for the fonts you want to use.
 
@@ -102,12 +96,9 @@ The [Fontsource](https://fontsource.org/) project simplifies using Google Fonts 
     }
     ```
 
+## Register fonts in Tailwind
 
-## Integrations
-
-### Add fonts with Tailwind
-
-If you are using the [Tailwind integration](/en/guides/integrations-guide/tailwind/), you can either add an [`@font-face` statement for a local font](#using-a-local-font-file) or use [Fontsource's `import` strategy](#using-fontsource) to register your font.
+If you are using the [Tailwind integration](/en/guides/integrations-guide/tailwind/), you can either add an [`@font-face` statement for a local font](#using-a-local-font-file) or use [Fontsource's `import` strategy](#using-fontsource) to install your font.
 
 :::note
 Make yourself familiar with the mentioned strategies before proceeding with the following steps.
