add `astro check` to CLI tip

--- a/src/content/docs/en/reference/cli-reference.mdx
+++ b/src/content/docs/en/reference/cli-reference.mdx
@@ -119,7 +119,7 @@ This command only checks types within `.astro` files.
 </p>
 
 :::tip
-Running `astro dev` or `astro build` will run the `sync` command as well.
+Running `astro dev`, `astro build` or `astro check` will run the `sync` command as well.
 :::
 
 Generates TypeScript types for all Astro modules. This sets up a [`src/env.d.ts` file](/en/guides/typescript/#setup) for type inferencing, and defines the `astro:content` module for the [Content Collections API](/en/guides/content-collections/).
