--- a/src/content/docs/zh-cn/guides/troubleshooting.mdx
+++ b/src/content/docs/zh-cn/guides/troubleshooting.mdx
@@ -37,7 +37,7 @@ Astro 组件是在服务器上运行的，因此你不能在 frontmatter (代码
 
 **状态**：预期 Astro 行为。
 
-### 期待默认导出
+### Expected a default export（期待默认导出）
 
 当试图导入或渲染一个无效的、无法正常工作的组件时，会出现这个错误。（该错误信息是由 Astro 中导入 UI 组件的方式造成的。）
 
