--- a/src/content/docs/zh-cn/guides/troubleshooting.mdx
+++ b/src/content/docs/zh-cn/guides/troubleshooting.mdx
@@ -45,7 +45,7 @@ Astro 组件是在服务器上运行的，因此你不能在 frontmatter (代码
 
 **状态**：预期 Astro 行为。
 
-### 拒绝执行内联脚本
+### Refused to execute inline script（拒绝执行内联脚本）
 
 你可能会在浏览器控制台中看到以下错误：
 
