--- a/src/content/docs/fr/reference/cli-reference.mdx
+++ b/src/content/docs/fr/reference/cli-reference.mdx
@@ -31,7 +31,7 @@ Dans la plupart des cas, vous utiliserez l'ILC via votre gestionnaire de paquets
   </Fragment>
 </PackageManagerTabs>
 
-Si vous avez démarré votre projet en utilisant [l'assistant `create astro`](/fr/install/auto/#1-run-the-setup-wizard), vous pouvez également utiliser les scripts dans `package.json` pour une version abrégée de ces commandes. Consultez le fichier README.md de votre projet pour savoir quelles commandes sont disponibles.
+Si vous avez démarré votre projet en utilisant [l'assistant `create astro`](/fr/install/auto/#1-utiliser-lassistant-dinstallation), vous pouvez également utiliser les scripts dans `package.json` pour une version abrégée de ces commandes. Consultez le fichier README.md de votre projet pour savoir quelles commandes sont disponibles.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -80,7 +80,7 @@ Ne pas utiliser l'option `--host` pour exposer le serveur de développement à u
 
 ## `astro build`
 
-Compile votre site pour le déploiement. Par défaut, cela générera des fichiers statiques et les placera dans un répertoire `dist/`. Si le [SSR est activé](/fr/guides/rendu-côté-serveur/), cela générera les fichiers serveur nécessaires à votre site.
+Compile votre site pour le déploiement. Par défaut, cela générera des fichiers statiques et les placera dans un répertoire `dist/`. Si le [SSR est activé](/fr/guides/server-side-rendering/), cela générera les fichiers serveur nécessaires à votre site.
 
 <h3>Options</h3>
 
@@ -88,7 +88,7 @@ Utilisez ces options pour personnaliser votre Build. Pour les options partagées
 
 #### `--drafts`
 
-Inclut les [pages de brouillon Markdown](/fr/guides/markdown-content/#pages-brouillon) dans le Build.
+Inclut les [pages de brouillon Markdown](/fr/guides/markdown-content/#pages-brouillons) dans le Build.
 
 ## `astro preview`
 
@@ -122,11 +122,11 @@ Cette commande ne vérifie les types que dans les fichiers `.astro`.
 Exécuter `astro dev` ou `astro build` exécutera également la commande `sync`.
 :::
 
-Génère des types TypeScript pour tous les modules Astro. Cela configure un [fichier `src/env.d.ts`](/fr/guides/typescript/#setup) pour l'inférence de type et définit le module `astro:content` pour l'[API de Collections de Contenu](/fr/guides/content-collections/).
+Génère des types TypeScript pour tous les modules Astro. Cela configure un [fichier `src/env.d.ts`](/fr/guides/typescript/#mise-en-place) pour l'inférence de type et définit le module `astro:content` pour l'[API de Collections de Contenu](/fr/guides/content-collections/).
 
 ## `astro add`
 
-Ajoute une intégration à votre configuration. En savoir plus dans [le guide des intégrations](/fr/guides/integrations-guide/#automatic-integration-setup).
+Ajoute une intégration à votre configuration. En savoir plus dans [le guide des intégrations](/fr/guides/integrations-guide/#configuration-dintégration-automatique).
 
 ## `astro docs`
 
