update from PR #2763

--- a/src/content/docs/fr/reference/cli-reference.mdx
+++ b/src/content/docs/fr/reference/cli-reference.mdx
@@ -119,7 +119,7 @@ Cette commande ne vérifie les types que dans les fichiers `.astro`.
 </p>
 
 :::tip
-Exécuter `astro dev` ou `astro build` exécutera également la commande `sync`.
+Exécuter `astro dev`, `astro build` ou `astro check` exécutera également la commande `sync`.
 :::
 
 Génère des types TypeScript pour tous les modules Astro. Cela configure un [fichier `src/env.d.ts`](/fr/guides/typescript/#mise-en-place) pour l'inférence de type et définit le module `astro:content` pour l'[API de Collections de Contenu](/fr/guides/content-collections/).
