--- a/src/content/docs/fr/reference/cli-reference.mdx
+++ b/src/content/docs/fr/reference/cli-reference.mdx
@@ -72,7 +72,7 @@ Spécifie le port sur lequel se démarrer. Il est défini par défaut sur `3000`
 Définit les adresses IP réseau sur lesquelles le serveur de développement doit écouter (c'est-à-dire les adresses IP autres que localhost). Cela peut être utile pour tester votre projet sur des périphériques locaux tels qu'un téléphone portable pendant le développement.
 
 - `--host` — écouter sur toutes les adresses, y compris les adresses LAN et publiques
-- `--host` <adresse-personnalisée> — expose une adresse IP réseau à <adresse-personnalisée>
+- `--host <adresse-personnalisée>` — expose une adresse IP réseau à `<adresse-personnalisée>`
 
 :::caution
 Ne pas utiliser l'option `--host` pour exposer le serveur de développement à un environnement de production. Le serveur de développement est conçu pour une utilisation locale pendant le développement de votre site uniquement.
